@@ -11,6 +11,8 @@ Update result groupings and header colours
 Use different chunk when result reference is not available
 Display location ref, vocab and update css for description
 Update table widths and font size for related-activity
+Display result main titles
+Display achieved percentage as color indicators
 
 
 Development Portal (2020-02-28 shi)
